<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20.0dip"
        android:orientation="vertical" >
        
        

        <RelativeLayout
            android:id="@+id/candidate_friend"
            android:layout_width="fill_parent"
            android:layout_height="47.0dip"
            android:layout_marginTop="13.0dip"
            android:background="@drawable/setting_single_selector"
            android:clickable="true"
            android:onClick="onClick"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/settings_item_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/empty"
                android:src="@drawable/add_friend_invite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14.0dip"
                android:layout_toRightOf="@id/settings_item_icon"
                android:text="@string/friend_candidate"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@+id/g_more_icon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12.0dip"
                android:background="@drawable/g_more_icon"
                android:contentDescription="@string/empty" />

            <TextView
                android:id="@+id/candidate_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10.0dip"
                android:layout_toLeftOf="@id/g_more_icon_image"
                android:background="@drawable/g_unread_messages_bg"
                android:gravity="center"
                android:singleLine="true"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="12.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="50.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip" >

            <EditText
                android:id="@+id/add_friend_by_search_keyword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@id/add_friend_by_search_submit"
                android:background="@drawable/edit_text_bg2"
                android:drawablePadding="5.0dip"
                android:hint="@string/add_friend_search_hint"
                android:imeOptions="actionSearch"
                android:paddingBottom="10.0dip"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray8"
                android:textSize="@dimen/text_size_16" />

            <Button
                android:id="@id/add_friend_by_search_submit"
                style="@style/shadow_title_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10.0dip"
                android:background="@drawable/g_green_btn_selector"
                android:gravity="center"
                
                android:onClick="searchContact"
            	android:text="@string/button_search"
            	
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                
                android:textColor="@color/white"
                android:textSize="14.0sp" />
        </RelativeLayout>

        <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mm_listitem"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/mm_listitem"
            android:duplicateParentState="true" >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="11dp"
                android:scaleType="fitXY"
                android:src="@drawable/default_avatar" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@id/avatar"
                android:textColor="#0F0F0F"
                android:textSize="16sp" />


            <Button
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11dp"
                android:background="@drawable/button_bg"
                android:onClick="addContact"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/button_add"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/bottom_divider_bg_2px"
            android:minHeight="50.0dip" />

        <RelativeLayout
            android:id="@+id/add_friend_by_qrcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_divider_match_parent_selector"
            android:clickable="true"
            android:minHeight="50.0dip"
            android:onClick="onClick"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip" >

            <ImageView
                android:id="@+id/add_friend_scan_qr_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty"
                android:src="@drawable/contacts_add_friend_scan" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14.0dip"
                android:layout_toRightOf="@id/add_friend_scan_qr_icon"
                android:background="@drawable/bottom_divider_bg"
                android:gravity="center_vertical"
                android:minHeight="50.0dip"
                android:text="@string/add_friend_scan_qr_code"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_friend_face_to_face"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_divider_match_parent_selector"
            android:clickable="true"
            android:minHeight="50.0dip"
            android:onClick="onClick"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip" >

            <ImageView
                android:id="@+id/add_friend_radar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty"
                android:src="@drawable/contacts_add_friend_radar" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14.0dip"
                android:layout_toRightOf="@id/add_friend_radar_icon"
                android:background="@drawable/bottom_divider_bg"
                android:gravity="center_vertical"
                android:minHeight="50.0dip"
                android:text="@string/add_friend_face_to_face"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_friend_by_local"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_divider_match_parent_selector"
            android:clickable="true"
            android:minHeight="50.0dip"
            android:onClick="onClick"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip" >

            <ImageView
                android:id="@+id/add_friend_contacts_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty"
                android:src="@drawable/contacts_add_friend_phone_contacts" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14.0dip"
                android:layout_toRightOf="@id/add_friend_contacts_icon"
                android:background="@drawable/bottom_divider_bg"
                android:gravity="center_vertical"
                android:minHeight="50.0dip"
                android:text="@string/add_friend_contacts"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_official_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_divider_match_parent_selector"
            android:clickable="true"
            android:minHeight="50.0dip"
            android:onClick="onClick"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip" >

            <ImageView
                android:id="@+id/add_official_account_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty"
                android:src="@drawable/contacts_add_friend_seach" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14.0dip"
                android:layout_toRightOf="@id/add_official_account_icon"
                android:background="@drawable/bottom_divider_bg"
                android:gravity="center_vertical"
                android:minHeight="50.0dip"
                android:text="@string/add_official_contacts"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/invite_friend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_divider_match_parent_selector"
            android:clickable="true"
            android:minHeight="50.0dip"
            android:onClick="onClick"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip" >

            <ImageView
                android:id="@+id/invite_friend_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty"
                android:src="@drawable/contacts_add_friend_invite" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14.0dip"
                android:layout_toRightOf="@id/invite_friend_icon"
                android:background="@drawable/bottom_divider_bg"
                android:gravity="center_vertical"
                android:minHeight="50.0dip"
                android:text="@string/add_friend_invite"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>